Updating index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Testing Git</title>
+	<title>Testing GIT for students</title>
 </head>
 <body>
-	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aperiam, placeat facere maiores deserunt suscipit consectetur rerum nostrum ducimus autem tenetur ab provident voluptatum, fugit quis, reiciendis natus doloremque, nemo ipsum cumque neque quaerat in sint voluptatibus quisquam. Odio fugit, saepe earum quod dolores? Alias accusantium error nulla doloremque itaque ut illum, iste aut consequuntur sit voluptate officiis soluta esse doloribus nesciunt, tempore iusto sequi perferendis mollitia, et sed nostrum! Dolor quasi debitis recusandae quia delectus beatae, aut ullam incidunt, omnis saepe rem natus et officiis ut atque, assumenda ex doloribus aspernatur voluptatum perferendis, inventore quod nam! Natus, eligendi voluptas.</p>
 </body>
 </html>
